[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyrx*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "pyrx.__version__" }

[project]
name = "pyrx"
dynamic = ["version"]
authors = [{ name = "Daniel", email = "dwmcabinets@yahoo.com" }]
description = "Python wrappers for Autocad ObjectARX® and clones."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["dwg", "dxf", "autocad", "bricscad", "gstarcad", "zwcad"]
license = { text = "" }                                               # !!!!!!!!!!!!!!!!!!!
# full list of classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["wxpython"]

[project.optional-dependencies]
activex = ["pywin32"]

[project.urls]
Homepage = "https://pyarx.blogspot.com/"
Repository = "https://github.com/CEXT-Dan/PyRx"
Issues = "https://github.com/CEXT-Dan/PyRx/issues"

[tool.black]
force-exclude = '''
pyrx/activex/.*pyi?
| pyrx/PyRxStubs/.*pyi?
| PyRxStubs/.*pyi?
'''
line-length = 120

[tool.isort]
profile = "black"
skip_glob = ["PyRxStubs/*.py*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
